<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="menu_search" translatable="false">Поиск</string>
    <string name="menu_media" translatable="false">Медиатека</string>
    <string name="menu_sets" translatable="false">Настройки</string>
    <string name="dark_mode" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="txt_sprt" translatable="false">Написать в поддержку</string>
    <string name="usr_agree" translatable="false">Пользовательское соглашение</string>
    <string name="url_ya_pr_android" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="tech_mail" translatable="false">seedim@yandex.ru</string>
    <string name="url_usr_agree" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="tech_mail_subj">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="tech_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
</resources>