<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_blue"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:padding="4dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_srch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/margin_main_ver"
        android:layout_marginHorizontal="@dimen/margin_main_hor"
        android:layout_weight="1"
        android:backgroundTint="@color/btn_back_white"
        android:text="@string/menu_search"
        android:textColor="@color/text_black"
        android:radius="@dimen/corner_rad"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/corner_rad"
        android:foreground="?attr/selectableItemBackground"
    />

    <Button
        android:id="@+id/btn_media"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/margin_main_ver"
        android:layout_marginHorizontal="@dimen/margin_main_hor"
        android:layout_weight="1"
        android:backgroundTint="@color/btn_back_white"
        android:text="@string/menu_media"
        android:textColor="@color/text_black"
        android:radius="@dimen/corner_rad"
        app:icon="@drawable/mediatech"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/corner_rad"
        android:foreground="?attr/selectableItemBackground"
        />
    <Button
        android:id="@+id/btn_sets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/margin_main_ver"
        android:layout_marginHorizontal="@dimen/margin_main_hor"
        android:layout_weight="1"
        android:backgroundTint="@color/btn_back_white"
        android:text="@string/menu_sets"
        android:textColor="@color/text_black"
        android:radius="@dimen/corner_rad"
        app:icon="@drawable/options"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/corner_rad"
        android:foreground="?attr/selectableItemBackground"
        />

</LinearLayout>