<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_back_white"
    android:orientation="vertical"
    android:id="@+id/main"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            app:iconGravity="textStart"
            android:paddingTop="8dp"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/text_black"
            app:icon="@drawable/arrowback"
            app:iconTint="@color/text_black"
            android:id="@+id/sets_back"/>
        <TextView
            android:paddingHorizontal="12dp"
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/menu_sets"
            android:textColor="@color/text_black"
            android:textSize="26sp"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_back_white"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:layout_marginTop="24dp"
        >
        <TextView
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dark_mode"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:height="48dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_back_white"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        >
        <TextView
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/text_black"
            android:textSize="20sp" />
        <Button
            app:iconGravity="textStart"
            android:paddingTop="8dp"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/share"
            app:iconTint="@color/unactive_gray"
            android:foreground="?attr/selectableItemBackground" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_back_white"
        android:orientation="horizontal"
        android:paddingVertical="10dp">
        <TextView
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:paddingTop="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_sprt"
            android:textColor="@color/text_black"
            android:textSize="20sp" />
        <Button
            app:iconGravity="textStart"
            android:paddingTop="8dp"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/tech_sprt"
            app:iconTint="@color/unactive_gray"
            android:foreground="?attr/selectableItemBackground" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_back_white"
        android:orientation="horizontal"
        android:paddingVertical="10dp">
        <TextView
            android:gravity="start"
            android:paddingHorizontal="12dp"
            android:paddingTop="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/usr_agree"
            android:textColor="@color/text_black"
            android:textSize="20sp" />
        <Button
            app:iconGravity="textStart"
            android:paddingTop="8dp"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/nextarrow"
            app:iconTint="@color/unactive_gray"
            android:foreground="?attr/selectableItemBackground" />
    </LinearLayout>

</LinearLayout>
